# mkernel-empty-project

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  bridge.sh  dune-project  dune-workspace  uniko.opam  uniko.opam.template  vendor.sh
lib/: util.ml
src/: dune  manifest.json  uniko.ml
src/lib/: dune  util.mli
support/: slides.md
